# retrodiff

./: .gitignore  LICENSE.txt  README.md  setup.cfg
examples/: classify.py  dag_usage.py  loss.py  nn_example.py  nn_usage.py  regression.py  test.py  torch_compare.py
retrodiff/: __init__.py  dag.py  model.py  nn.py
retrodiff/utils/: __init__.py  function.py  functions.py  loss.py  nn.py  optim.py
tests/: test_dag.py  test_model.py  torch_compare.py
