[metadata]
name = retrodiff-butyess
version = 0.1.0
author = Federico Masi
author_email = federico.masi.k333@gmail.com
description = Automatic differentiation library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
keywords = autodiff, deep learning
url = https://github.com/butyess/retrodiff
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = retrodiff
python_requires = >=3.6

